tests/fixtures/negative/25_none_int_failure.yc
import "std/fmt" as fmt

fn main() {
    value: i32 := none
    fmt.println(value)
}
